--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.51.21",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.5",
