--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -32,7 +33,6 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.5.4",
     "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
 }
